@@ -31,6 +31,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   passing "uploadmsg" parameter in the url
 * (bug 9947) Add PROTECTIONLEVEL parser funtion to return the protection level
   for the current page for a given action
+* Added "__\" magic word to eat up all whitespace and newlines to the next 
+  non-whitespace character, to facilitate writing readable template code where
+  whitespace is significant.
   
 === Bug fixes in 1.15 ===
 * Fixing the caching issue by using -{T|xxx}- syntax (only applies on wiki with LanguageConverter class)
